--- a/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
@@ -89,6 +89,9 @@
     <Compile Include="DataAnalysisProblemData.cs" />
     <Compile Include="DataFormatException.cs" />
     <Compile Include="Dataset.cs" />
+    <Compile Include="Evaluators\OnlineMeanAbsolutePercentageErrorEvaluator.cs" />
+    <Compile Include="Evaluators\OnlineMeanSquaredErrorEvaluator.cs" />
+    <Compile Include="Evaluators\OnlinePearsonsRSquaredEvaluator.cs" />
     <Compile Include="Evaluators\SimpleEvaluator.cs" />
     <Compile Include="Evaluators\SimpleMeanAbsolutePercentageErrorEvaluator.cs" />
     <Compile Include="Evaluators\SimpleMeanAbsolutePercentageOfRangeErrorEvaluator.cs" />
@@ -99,6 +102,7 @@
     <Compile Include="HeuristicLabProblemsDataAnalysisPlugin.cs" />
     <Compile Include="Interfaces\IDataAnalysisModel.cs" />
     <Compile Include="Interfaces\IDataAnalysisProblem.cs" />
+    <Compile Include="Interfaces\IOnlineEvaluator.cs" />
     <Compile Include="MatrixExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SupportVectorMachine\ParameterAdjustmentProblem\SupportVectorMachineParameterAdjustmentBestSolutionAnalyzer.cs" />
