#1040  * Ported the other two operators
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4039 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.NSGA2/3.3/HeuristicLab.Algorithms.NSGA2-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.NSGA2/3.3/HeuristicLab.Algorithms.NSGA2-3.3.csproj
@@ -75,7 +75,9 @@
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
     <None Include="HeuristicLabAlgorithmsNSGA2Plugin.cs.frame" />
+    <Compile Include="CrowdedComparisonSorter.cs" />
     <Compile Include="CrowdingDistanceAssignment.cs" />
+    <Compile Include="FastNonDominatedSort.cs" />
     <Compile Include="HeuristicLabAlgorithmsNSGA2Plugin.cs" />
     <Compile Include="NSGA2.cs" />
     <Compile Include="NSGA2MainLoop.cs" />
