#926  * Added `LeftSelector` and `RightSelector` (reverted some changes in r3096)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4043 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Selection/3.3/HeuristicLab.Selection-3.3.csproj
+++ b/sources/HeuristicLab.Selection/3.3/HeuristicLab.Selection-3.3.csproj
@@ -83,11 +83,13 @@
     <None Include="HeuristicLabSelectionPlugin.cs.frame" />
     <Compile Include="BestSelector.cs" />
     <Compile Include="ConditionalSelector.cs" />
+    <Compile Include="LeftSelector.cs" />
     <Compile Include="RandomReplacer.cs" />
     <Compile Include="GenderSpecificSelector.cs" />
     <Compile Include="OffspringSelector.cs" />
     <Compile Include="Replacer.cs" />
     <Compile Include="RightChildReducer.cs" />
+    <Compile Include="RightSelector.cs" />
     <Compile Include="SingleObjectiveSelector.cs" />
     <Compile Include="LeftReducer.cs" />
     <Compile Include="MergingReducer.cs" />
