implemented first version of !BoxPlotView (ticket #970)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4094 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization.Views/3.3/HeuristicLab.Optimization.Views-3.3.csproj
+++ b/sources/HeuristicLab.Optimization.Views/3.3/HeuristicLab.Optimization.Views-3.3.csproj
@@ -124,6 +124,12 @@
     <Compile Include="BatchRunView.Designer.cs">
       <DependentUpon>BatchRunView.cs</DependentUpon>
     </Compile>
+    <Compile Include="RunCollectionBoxPlotView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="RunCollectionBoxPlotView.Designer.cs">
+      <DependentUpon>RunCollectionBoxPlotView.cs</DependentUpon>
+    </Compile>
     <Compile Include="RunCollectionComparisonConstraintView.cs">
       <SubType>UserControl</SubType>
     </Compile>
